Fixed ScrollBar

--- a/css/styles.css
+++ b/css/styles.css
@@ -274,7 +274,6 @@ footer{
      position: relative;
      width: 100%;
      min-height: 350px;
-     padding: 3rem 1rem;
 }
 .container {
     max-width: 1140px;
